// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-form-check-group"
  >
    <label
      class="t-checkbox"
    >
      <input
        class="t-checkbox__former"
        readonly=""
        type="checkbox"
        value="la"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        加辣
      </span>
    </label>
    <label
      class="t-checkbox"
    >
      <input
        class="t-checkbox__former"
        readonly=""
        type="checkbox"
        value="ma"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        加麻
      </span>
    </label>
    <label
      class="t-checkbox"
    >
      <input
        class="t-checkbox__former"
        readonly=""
        type="checkbox"
        value="nocong"
      />
      <span
        class="t-checkbox__input"
      />
      <span
        class="t-checkbox__label"
      >
        不要葱花
      </span>
    </label>
  </div>
</DocumentFragment>
`;

exports[`link.jsx 1`] = `
<DocumentFragment>
  <label
    class="t-checkbox"
  >
    <input
      class="t-checkbox__former"
      readonly=""
      type="checkbox"
      value=""
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      腾讯云A
    </span>
  </label>
  <label
    class="t-checkbox"
  >
    <input
      class="t-checkbox__former"
      readonly=""
      type="checkbox"
      value=""
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      腾讯云B
    </span>
  </label>
  <label
    class="t-checkbox"
  >
    <input
      class="t-checkbox__former"
      readonly=""
      type="checkbox"
      value=""
    />
    <span
      class="t-checkbox__input"
    />
    <span
      class="t-checkbox__label"
    >
      腾讯云C
    </span>
  </label>
  <div
    style="margin: 16px 0px;"
  >
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
    >
      删除
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-left: 16px;"
    >
      开启
    </button>
  </div>
</DocumentFragment>
`;
